# pennylane

./: .gitignore  setup.py
benchmark/: benchmark.py  bm_entangling_layers.py  view_pstats.sh
pennylane/: __init__.py  _qubit_device.py  operation.py
pennylane/ops/: __init__.py  qubit.py
pennylane/optimize/: qng.py
pennylane/plugins/: CMakeLists.txt  Makefile  __init__.py  conanfile.txt  default_qubit.py  lightning_qubit.py  lightning_qubit_ops  lightning_qubit_ops.cpp  lightning_qubit_utils.pyx  lqo
pennylane/qnodes/: jacobian.py
pennylane/templates/layers/: strongly_entangling.py
tests/: gate_data.py
tests/ops/: test_qubit_ops.py
